# gpsdclient

./: CHANGELOG.md  LICENSE.txt  README.md  gpsdclient.py  pyproject.toml  test_gpsdclient.py
.github/: FUNDING.yml
.github/workflows/: tests.yml
gpsdclient/: __main__.py  cli.py  client.py
tests/: _fake_server.py  gpsd_fake.py  test_gpsdclient.py
