[tool.poetry]
name = "gpsdclient"
version = "0.1.0"
description = "A simple gpsd client."
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
