[tool.poetry]
name = "gpsdclient"
version = "0.2.0"
description = "A simple gpsd client."
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
gpsdclient = "gpsdclient.cli:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
