[tool.poetry]
name = "gpsdclient"
version = "1.3.1"
description = "A simple gpsd client."
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tfeldmann/gpsdclient"
keywords = ["gpsd", "gps", "client", "standalone", "socket", "stream"]
classifiers = [
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
gpsdclient = "gpsdclient.cli:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
